--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "5.14.0",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@types/uuid": "^9.0.8",
     "@vercel/postgres": "^0.8.0",
     "axios": "^1.7.2",
